--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vegas/vegas.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,16 +27,13 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/vegas/vegas.min.js"></script>
     <script>
-    $('body').vegas({
-
-    });
-    $("#example, body").vegas({
+    $("body").vegas({
     slides: [
         { src: "assets/images/background/pexels-1.jpeg" },
         { src: "assets/images/background/pexels-2.jpeg" },
         { src: "assets/images/background/pexels-3.jpeg" }
-    ]
-});
+          ]
+      });
     </script>
   </body>
 </html>
