--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vegas/vegas.min.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,6 +20,14 @@
     <![endif]-->
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5 col-sm-offset-3 text-center" id="profile">
+          <img src="assets/images/photo.jpg" class="photo-profile">
+          <h3>Muhammad Abdurrahman</h3>
+        </div>
+      </div>
+    </div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
