profile on progress

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vegas/vegas.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,6 +27,11 @@
         <div class="col-sm-5 col-sm-offset-3 text-center" id="profile">
           <img src="assets/images/photo.jpg" class="photo-profile">
           <h3>Muhammad Abdurrahman</h3>
+          <a href="https://twitter.com/rachman_za"><i class="icon-twitter" style="font-size:40pt"></i></a>
+          <a href="https://github.com/rachmanzz?tab=repositories"><i class="icon-github" style="font-size:40pt"></i></a>
+          <a href="https://www.facebook.com/rachmanzz"><i class="icon-facebook" style="font-size:40pt"></i></a>
+          <br><br>
+          <button class="btn btn-info btn-lg">hiring me</button> <button class="btn btn-info btn-lg">explore my project</button>
         </div>
       </div>
     </div>
