profile on progress

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="https://github.com/rachmanzz?tab=repositories"><i class="icon-github" style="font-size:40pt"></i></a>
           <a href="https://www.facebook.com/rachmanzz"><i class="icon-facebook" style="font-size:40pt"></i></a>
           <br><br>
-          <button href="mailto:rachman.sd@gmail.com" class="btn btn-info btn-lg">hiring me</button> <button href="https://github.com/rachmanzz" class="btn btn-info btn-lg">explore my project</button>
+          <a href="mailto:rachman.sd@gmail.com" class="btn btn-info btn-lg">hiring me</a> <a href="https://github.com/rachmanzz" class="btn btn-info btn-lg">explore my project</a>
         </div>
       </div>
     </div>
