--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         <div class="col-sm-6 col-sm-offset-3 text-center" id="profile">
           <img src="assets/images/photo.jpg" class="photo-profile">
           <h3>Muhammad Abdurrahman</h3>
-          <a href="https://twitter.com/rachman_za"><i class="icon-twitter" style="font-size:40pt"></i></a>
-          <a href="https://github.com/rachmanzz?tab=repositories"><i class="icon-github" style="font-size:40pt"></i></a>
-          <a href="https://www.facebook.com/rachmanzz"><i class="icon-facebook" style="font-size:40pt"></i></a>
-          <br><br>
+          <a href="https://twitter.com/rachman_za"><i class="icon-twitter"></i></a>
+          <a href="https://github.com/rachmanzz?tab=repositories"><i class="icon-github"></i></a>
+          <a href="https://www.facebook.com/rachmanzz"><i class="icon-facebook"></i></a>
+          <br>
+          <p>Skills & endorsements : php(laravel, codeIgniter), javascript(es5,es6,jquery)</p>
+          <br>
           <a href="mailto:rachman.sd@gmail.com" class="btn btn-info btn-lg">hiring me</a> <a href="https://github.com/rachmanzz" class="btn btn-info btn-lg">explore my project</a>
         </div>
       </div>
