update profile on progress

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         { src: "assets/images/background/pexels-1.jpeg" },
         { src: "assets/images/background/pexels-2.jpeg" },
         { src: "assets/images/background/pexels-3.jpeg" }
-          ]
+      ],
+      transition: "zoomOut",
+      transitionDuration: 6000
       });
     </script>
   </body>
