update profile on progress

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         { src: "assets/images/background/pexels-3.jpeg" }
       ],
       transition: "zoomOut",
-      transitionDuration: 6000
+      transitionDuration: 10000,
+      overlay: 'assets/vegas/overlays/05.png'
       });
     </script>
   </body>
