--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
           <a href="https://github.com/rachmanzz?tab=repositories"><i class="icon-github"></i></a>
           <a href="https://www.facebook.com/rachmanzz"><i class="icon-facebook"></i></a>
           <br>
-          <p>Skills & endorsements : php(laravel, codeIgniter), javascript(es5,es6,jquery)</p>
+          <div id="status" class="text-center">
+            <h5>Skills & endorsements</h5>
+            <p>php(laravel, codeIgniter), javascript(es5,es6,jquery, nodejs), golang (beego) and android-java</p>
+          </div>
           <br>
           <a href="mailto:rachman.sd@gmail.com" class="btn btn-info btn-lg">hiring me</a> <a href="https://github.com/rachmanzz" class="btn btn-info btn-lg">explore my project</a>
         </div>
