update profile on progress

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <br>
           <div id="status" class="text-center">
             <h5>Skills & endorsements</h5>
-            <p>php(laravel, codeIgniter), javascript(es5,es6,jquery, nodejs), golang (beego) and android-java</p>
+            <p>php(laravel & codeIgniter), javascript(es5,es6,jquery and nodejs-backend), golang (beego) and android-java</p>
           </div>
           <br>
           <a href="mailto:rachman.sd@gmail.com" class="btn btn-info btn-lg">hiring me</a> <a href="https://github.com/rachmanzz" class="btn btn-info btn-lg">explore my project</a>
