--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>php(laravel framework) nodejs-backend(adonisjs framework), javascript(es5, es6,jquery, vue front-end framework), golang (beego) and android-java</p>
           </div>
           <br>
-          <a href="mailto:rachman.sd@gmail.com" class="btn btn-info btn-lg">hiring me</a> <a href="https://github.com/rachmanzz" class="btn btn-info btn-lg">explore my project</a>
+          <a href="mailto:rachman.sd@gmail.com" class="btn btn-info btn-lg">hiring me</a> <a href="https://github.com/rachmanzz" class="btn btn-info btn-lg">Open Source Project</a>
         </div>
       </div>
     </div>
