--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Follow me on Twitter @maridlcrmn
           <div class="collapse navbar-collapse" id="navbar-collapse-4">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#">Project</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="https://rachmanzz.blogspot.co.id/">Blog</a></li>
               <li>
                 <a class="btn btn-default btn-outline btn-circle collapsed"  href="rachmanzz.github.io" aria-expanded="false" aria-controls="nav-collapse4">Profile <i class=""></i> </a>
               </li>
