--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Follow me on Twitter @maridlcrmn
                   </div>
                   <div class="progress">
                       <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 43%;" data-toggle="tooltip" data-placement="top" title="Golang">
-                        <span class="sr-only">43% Complete</span>
+                        <span class="sr-only">28% Complete</span>
                         <span class="progress-type">Golang</span>
                       </div>
                   </div>
@@ -217,7 +217,7 @@ Follow me on Twitter @maridlcrmn
             </div>
             <div class="col-sm-6">
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 72%;" data-toggle="tooltip" data-placement="top" title="Nodejs">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 58%;" data-toggle="tooltip" data-placement="top" title="Nodejs">
                           <span class="sr-only">58% Complete</span>
                           <span class="progress-type">Nodejs</span>
                         </div>
@@ -253,8 +253,8 @@ Follow me on Twitter @maridlcrmn
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 25%;" data-toggle="tooltip" data-placement="top" title="MySql">
-                          <span class="sr-only">25% Complete</span>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 30%;" data-toggle="tooltip" data-placement="top" title="Firebase">
+                          <span class="sr-only">30% Complete</span>
                           <span class="progress-type">Firebase</span>
                         </div>
                     </div>
