--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@ Follow me on Twitter @maridlcrmn
                 <div class="collapse navbar-collapse" id="navbar-collapse-4">
                   <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Project</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="//rachmanzz.blogspot.co.id">Blog</a></li>
                     <li>
-                      <a class="btn btn-default btn-outline btn-circle collapsed"  href="rachmanzz.github.io" aria-expanded="false" aria-controls="nav-collapse4">Profile <i class=""></i> </a>
+                      <a class="btn btn-default btn-outline btn-circle collapsed"  href="//rachmanzz.github.io" aria-expanded="false" aria-controls="nav-collapse4">Profile <i class=""></i> </a>
                     </li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
@@ -165,7 +165,7 @@ Follow me on Twitter @maridlcrmn
                 <h3 style="font-weight: bolder">Skill Meter</h3>
                 <hr>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-5">
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 65%;" data-toggle="tooltip" data-placement="top" title="HTML / HTML5">
                     <span class="sr-only">65% Complete</span>
@@ -215,7 +215,7 @@ Follow me on Twitter @maridlcrmn
                   <div class="meter meter-right" style="width: 30%;"><span class="meter-text">WOW</span></div>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-5">
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 58%;" data-toggle="tooltip" data-placement="top" title="Nodejs">
                           <span class="sr-only">58% Complete</span>
@@ -264,7 +264,77 @@ Follow me on Twitter @maridlcrmn
                       <div class="meter meter-right" style="width: 20%;"><span class="meter-text">MASTER</span></div>
                     <div class="meter meter-right" style="width: 30%;"><span class="meter-text">WOW</span></div>
                   </div>
+            </div>
+            <div class="col-sm-2">
+                  <div class="progress">
+                      <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 53%;" data-toggle="tooltip" data-placement="top" title="English">
+                        <span class="sr-only">53% Complete</span>
+                        <span class="progress-type">American English</span>
+                      </div>
+                  </div>
+                  <div class="progress">
+                      <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 42%;" data-toggle="tooltip" data-placement="top" title="English">
+                        <span class="sr-only">42% Complete</span>
+                        <span class="progress-type">British English</span>
+                      </div>
+                  </div>
+                  <div class="progress">
+                      <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 74%;" data-toggle="tooltip" data-placement="top" title="Indonesian">
+                        <span class="sr-only">74% Complete</span>
+                        <span class="progress-type">Indonesian</span>
+                      </div>
+                  </div>
+                  <div class="progress">
+                      <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 7%;" data-toggle="tooltip" data-placement="top" title="deutsche Sprache">
+                        <span class="sr-only">7% Complete</span>
+                        <span class="progress-type">Deutsche Sprache</span>
+                      </div>
+                  </div>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 text-center" style="margin-top: 100px">
+            <h3 style="font-weight: bolder">Repositories</h3>
+            <hr>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="thumbnail">
+              <img src="./assets/images/github_logo.png" alt="Git Reposite">
+              <div class="caption text-center">
+                <h3>Vue-Inview</h3>
+                <p>
+                  Viewport, get notification when DOM element is entered or leave
+                </p>
+                <a href="#" class="btn btn-primary" role="button">Explorer Reposite</a>
               </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+              <div class="thumbnail">
+                <img src="./assets/images/github_logo.png" alt="Git Reposite">
+                <div class="caption text-center">
+                  <h3>Vue-Inview</h3>
+                  <p>
+                    Viewport, get notification when DOM element is entered or leave
+                  </p>
+                  <a href="#" class="btn btn-primary" role="button">Explorer Reposite</a>
+                </div>
+              </div>
+          </div>
+          <div class="col-sm-4">
+              <div class="thumbnail">
+                <img src="./assets/images/github_logo.png" alt="Git Reposite">
+                <div class="caption text-center">
+                  <h3>Vue-Inview</h3>
+                  <p>
+                    Viewport, get notification when DOM element is entered or leave
+                  </p>
+                  <a href="#" class="btn btn-primary" role="button">Explorer Reposite</a>
+                </div>
+              </div>
+          </div>
         </div>
     </div>
 
