--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ Follow me on Twitter @maridlcrmn
                 <p>
                   Viewport, get notification when DOM element is entered or leave
                 </p>
-                <a href="#" class="btn btn-primary" role="button">Explorer Reposite</a>
+                <a href="https://github.com/rachmanzz/vue-inview" class="btn btn-primary" role="button">Explorer Reposite</a>
               </div>
             </div>
           </div>
@@ -315,11 +315,11 @@ Follow me on Twitter @maridlcrmn
               <div class="thumbnail">
                 <img src="./assets/images/github_logo.png" alt="Git Reposite">
                 <div class="caption text-center">
-                  <h3>Vue-Inview</h3>
+                  <h3>Vue-Form</h3>
                   <p>
-                    Viewport, get notification when DOM element is entered or leave
+                    Convert value of form to javascript object And also incude with form validation.
                   </p>
-                  <a href="#" class="btn btn-primary" role="button">Explorer Reposite</a>
+                  <a href="https://github.com/rachmanzz/vue-form" class="btn btn-primary" role="button">Explorer Reposite</a>
                 </div>
               </div>
           </div>
@@ -327,11 +327,11 @@ Follow me on Twitter @maridlcrmn
               <div class="thumbnail">
                 <img src="./assets/images/github_logo.png" alt="Git Reposite">
                 <div class="caption text-center">
-                  <h3>Vue-Inview</h3>
+                  <h3>Electron Kits</h3>
                   <p>
-                    Viewport, get notification when DOM element is entered or leave
+                    Mini Library for electron application width M-VC Modeling.
                   </p>
-                  <a href="#" class="btn btn-primary" role="button">Explorer Reposite</a>
+                  <a href="https://github.com/rachmanzz/electron-kits-start" class="btn btn-primary" role="button">Explorer Reposite</a>
                 </div>
               </div>
           </div>
