--- a/index.html
+++ b/index.html
@@ -337,7 +337,26 @@ Follow me on Twitter @maridlcrmn
           </div>
         </div>
     </div>
-    <footer></footer>
+    <footer>
+      <div class="containner">
+        <div class="row">
+          <div class="col-sm-8">
+            <h4 style="margin-top: 10px; margin-left: 20px; font-size: 12pt">Copyright &copy; rachmanzz.github.io 2018 </h4>
+          </div>
+          <div class="col-sm-4">
+              <h3>Muhammad Abdurrahman</h3>
+              <a class="social" href="https://twitter.com/rachman_za"><i class="icon-twitter"></i></a>
+              <a class="social" href="https://github.com/rachmanzz?tab=repositories"><i class="icon-github"></i></a>
+              <a class="social" href="https://www.facebook.com/rachmanzz"><i class="icon-facebook"></i></a>
+              <br />
+              <div style="margin-left: 20px; margin-top: 15px">
+                  Email : <a href="mailto:rachman.sd@gmail.com">rachman.sd@gmail.com</a><br />
+                  Blog : <a href="//rachmanzz.blogspot.com">https://rachmanzz.blogspot.com</a>
+              </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
