--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="//fortpush.com/ntfc.php?p=1889474" data-cfasync="false" async></script>
+    <script src="//go.mobtrks.com/notice.php?p=1889485&interstitial=1"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-5840718552349172",
